--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv = "X-UA-Compatible" content="ie=edge">
+    <meta http-equiv = "X-UA-Compatible" content="ie=edge">
     <title>Git test</title>
 </head>
 <body>
 
     <p>Hello world</p>
+    <script src="js/script.js"></script>;
 
 </body>
 </html>
