--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv = "X-UA-Compatible" content="ie=edge">
-    <title>Git test</title>
+    <title>Практика 2 часть. Применяем условия и циклы.</title>
 </head>
 <body>
 
